--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="sidebar">
-        <img src="/images/jonathan-weiss-1wT1EcGXKBk-unsplash.jpg" alt="">
         <div class="logo">
             <img src="/images/nghbrhdsd-logo.png" alt="">
         </div>
@@ -23,25 +22,37 @@
             </p>
         </div>
         <form>
-            <label for="first-name">FIRST NAME</label><br>
-            <input type="text" name="first-name" id="first-name">
+            <div class="first-name col">
+                <label for="first-name">FIRST NAME</label><br>
+                <input type="text" name="first-name" id="first-name">
+            </div>
 
-            <label for="last-name">LAST NAME</label><br>
-            <input type="text" name="last-name" id="last-name">
+            <div class="last-name col">
+                <label for="last-name">LAST NAME</label><br>
+                <input type="text" name="last-name" id="last-name">
+            </div>
 
-            <label for="e-mail">E-MAIL</label><br>
-            <input type="text" name="" id="">
+            <div class="e-mail col">
+                <label for="e-mail">E-MAIL</label><br>
+                <input type="text" name="" id="">
+            </div>
 
-            <label for="phone-number">PHONE NUMBER</label><br>
-            <input type="text" name="phone-number" id="phone-number">
+            <div class="phone-number col">
+                <label for="phone-number">PHONE NUMBER</label><br>
+                <input type="text" name="phone-number" id="phone-number">
+            </div>
 
-            <label for="password">PASSWORD</label><br>
-            <input type="text" name="password" id="password">
+            <div class="password col">
+                <label for="password">PASSWORD</label><br>
+                <input type="text" name="password" id="password">
+            </div>
 
-            <label for="confirm-pw">CONFIRM PASSWORD</label><br>
-            <input type="text" name="confirm-pw" id="confirm-pw">
+            <div class="confirm-pw col">
+                <label for="confirm-pw">CONFIRM PASSWORD</label><br>
+                <input type="text" name="confirm-pw" id="confirm-pw">
+            </div>
         </form>
-        <div class="button">
+        <div class="submit">
             <input type="submit" value="Create Account">
             <p>Already have an account?</p>
             <a href="">Log in</a>
