--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Silkscreen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Sign-up Form</title>
 </head>
 <body>
@@ -18,40 +18,37 @@
     <div class="container">
         <div class="caption">
             <p>
-                For faster and easier scheduling, create an account with us to save time finding a day for scheduling a haircut, choosing a style of haircut, and check history of scheduled haircuts.
+                For faster and easier scheduling, create an account with us to save time finding a day for scheduling a haircut, choosing a style of haircut, and checking history of scheduled haircuts.
             </p>
         </div>
-        <form>
-            <div class="first-name col">
-                <label for="first-name">FIRST NAME</label><br>
-                <input type="text" name="first-name" id="first-name">
-            </div>
-
-            <div class="last-name col">
-                <label for="last-name">LAST NAME</label><br>
-                <input type="text" name="last-name" id="last-name">
-            </div>
-
-            <div class="e-mail col">
-                <label for="e-mail">E-MAIL</label><br>
-                <input type="text" name="" id="">
-            </div>
-
-            <div class="phone-number col">
-                <label for="phone-number">PHONE NUMBER</label><br>
-                <input type="text" name="phone-number" id="phone-number">
-            </div>
-
-            <div class="password col">
-                <label for="password">PASSWORD</label><br>
-                <input type="text" name="password" id="password">
-            </div>
-
-            <div class="confirm-pw col">
-                <label for="confirm-pw">CONFIRM PASSWORD</label><br>
-                <input type="text" name="confirm-pw" id="confirm-pw">
-            </div>
-        </form>
+        <div class="form-container">
+            <form>
+                <div class="first-name col">
+                    <label for="first-name">FIRST NAME</label><br>
+                    <input type="text" name="first-name" id="first-name">
+                </div>
+                <div class="last-name col">
+                    <label for="last-name">LAST NAME</label><br>
+                    <input type="text" name="last-name" id="last-name">
+                </div>
+                <div class="e-mail col">
+                    <label for="e-mail">E-MAIL</label><br>
+                    <input type="text" name="" id="">
+                </div>
+                <div class="phone-number col">
+                    <label for="phone-number">PHONE NUMBER</label><br>
+                    <input type="text" name="phone-number" id="phone-number">
+                </div>
+                <div class="password col">
+                    <label for="password">PASSWORD</label><br>
+                    <input type="text" name="password" id="password">
+                </div>
+                <div class="confirm-pw col">
+                    <label for="confirm-pw">CONFIRM PASSWORD</label><br>
+                    <input type="text" name="confirm-pw" id="confirm-pw">
+                </div>
+            </form>
+        </div>
         <div class="submit">
             <input type="submit" value="Create Account">
             <p>Already have an account?</p>
